--- a/client/src/locales/en-FI/messages.po
+++ b/client/src/locales/en-FI/messages.po
@@ -5,7 +5,7 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: @lingui/cli\n"
-"Language: en\n"
+"Language: en-FI\n"
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: \n"
@@ -21,35 +21,35 @@ msgstr "{numSelected} selected"
 #: src/routes/not-found/not-found-unauthenticated.tsx
 #: src/routes/not-found/not-found-authenticated.tsx
 msgid "404"
-msgstr ""
+msgstr "404"
 
 #: src/routes/home/home.route.tsx
 msgid "A minimal design system provides a set of UI kit components that adhere to certain design principles backed by a set of design tokens. This template defines a comprehensive set of design tokens for things like colors, typography, spacing, etc. in a globally available theme object. Additionally, the design system incorporates a UI kit that is browsable in Storybook."
-msgstr ""
+msgstr "A minimal design system provides a set of UI kit components that adhere to certain design principles backed by a set of design tokens. This template defines a comprehensive set of design tokens for things like colors, typography, spacing, etc. in a globally available theme object. Additionally, the design system incorporates a UI kit that is browsable in Storybook."
 
 #: src/routes/home/home.route.tsx
 msgid "Accessibility"
-msgstr ""
+msgstr "Accessibility"
 
 #: src/routes/home/home.route.tsx
 msgid "Authentication"
-msgstr ""
+msgstr "Authentication"
 
 #: src/routes/post-list/post-list.route.tsx
 #: src/routes/post-list/post-list.route.tsx
 #: src/routes/post/post.route.tsx
 #: src/components/navigation/sidebar.tsx
 msgid "Blog"
-msgstr ""
+msgstr "Blog"
 
 #: src/components/common/lang-menu-button.tsx
 msgid "Change language"
-msgstr ""
+msgstr "Change language"
 
 #: src/components/uikit/partials/select-actions.tsx
 #: src/components/uikit/multi-select-combobox/index.tsx
 msgid "Clear"
-msgstr ""
+msgstr "Clear"
 
 #: src/components/uikit/date-range-picker/index.tsx
 #: src/components/uikit/date-picker/index.tsx
@@ -58,19 +58,19 @@ msgstr "Clear date"
 
 #: src/components/uikit/partials/select-filter-input.tsx
 msgid "Clear search filter"
-msgstr ""
+msgstr "Clear search filter"
 
 #: src/components/uikit/dialog/index.tsx
 msgid "Close"
-msgstr ""
+msgstr "Close"
 
 #: src/components/uikit/partials/select-actions.tsx
 msgid "Confirm"
-msgstr ""
+msgstr "Confirm"
 
 #: src/routes/post-create/post-create.route.tsx
 msgid "Content"
-msgstr ""
+msgstr "Content"
 
 #: src/components/uikit/date-picker/index.tsx
 msgid "Copied to clipboard"
@@ -90,74 +90,74 @@ msgstr "Could not paste \"{clipboardText}\" as a date"
 
 #: src/routes/post-create/post-create.route.tsx
 msgid "Create"
-msgstr ""
+msgstr "Create"
 
 #: src/routes/post-create/post-create.route.tsx
 msgid "Creating"
-msgstr ""
+msgstr "Creating"
 
 #: src/routes/home/home.route.tsx
 msgid "Dark Mode"
-msgstr ""
+msgstr "Dark Mode"
 
 #: src/routes/home/home.route.tsx
 msgid "Design System"
-msgstr ""
+msgstr "Design System"
 
 #: src/routes/login/login.route.tsx
 msgid "Email"
-msgstr ""
+msgstr "Email"
 
 #: src/routes/home/home.route.tsx
 msgid "Examples"
-msgstr ""
+msgstr "Examples"
 
 #: src/routes/post-create/post-create.route.tsx
 msgid "Failed to add new blog post"
-msgstr ""
+msgstr "Failed to add new blog post"
 
 #: src/routes/login/login.route.tsx
 msgid "Failed to login"
-msgstr ""
+msgstr "Failed to login"
 
 #: src/components/navigation/sidebar.tsx
 msgid "Failed to logout"
-msgstr ""
+msgstr "Failed to logout"
 
 #: src/routes/feature-3.route.tsx
 msgid "Feature flags"
-msgstr ""
+msgstr "Feature flags"
 
 #: src/routes/feature-3.route.tsx
 #: src/components/navigation/sidebar.tsx
 msgid "Feature Flags"
-msgstr ""
+msgstr "Feature Flags"
 
 #: src/routes/home/home.route.tsx
 msgid "Features"
-msgstr ""
+msgstr "Features"
 
 #: src/routes/home/home.route.tsx
 msgid "Good accessibility is a something that should be expected from every app. The building blocks for creating accessible components are provided by React Aria. This template has pre-built UI kit components, such as Button, Text, TextInput, etc., that have accessibility baked into them. You can use and extend this UI kit to fit your needs."
-msgstr ""
+msgstr "Good accessibility is a something that should be expected from every app. The building blocks for creating accessible components are provided by React Aria. This template has pre-built UI kit components, such as Button, Text, TextInput, etc., that have accessibility baked into them. You can use and extend this UI kit to fit your needs."
 
 #: src/routes/home/home.route.tsx
 msgid "Having dark mode support is a common ask from users nowadays. This template has a ready-to-use theming setup with light and dark themes that can be easily modified to conform to the client's branding. Try to toggle the theme in the top right corner."
-msgstr ""
+msgstr "Having dark mode support is a common ask from users nowadays. This template has a ready-to-use theming setup with light and dark themes that can be easily modified to conform to the client's branding. Try to toggle the theme in the top right corner."
 
 #: src/routes/home/home.route.tsx
 #: src/routes/home/home.route.tsx
 #: src/components/navigation/sidebar.tsx
 msgid "Home"
-msgstr ""
+msgstr "Home"
 
 #: src/routes/home/home.route.tsx
 msgid "In the sidebar you can browse through some example pages. (TODO: add more examples)"
-msgstr ""
+msgstr "In the sidebar you can browse through some example pages. (TODO: add more examples)"
 
 #: src/routes/home/home.route.tsx
 msgid "Internationalization"
-msgstr ""
+msgstr "Internationalization"
 
 #: src/components/uikit/date-range-picker/predefined-ranges.tsx
 msgid "Last 14 Days"
@@ -177,49 +177,49 @@ msgstr "Last Year"
 
 #: src/routes/login/login.route.tsx
 msgid "Logging in"
-msgstr ""
+msgstr "Logging in"
 
 #: src/components/navigation/sidebar.tsx
 msgid "Logging out"
-msgstr ""
+msgstr "Logging out"
 
 #: src/routes/login/login.route.tsx
 #: src/routes/login/login.route.tsx
 msgid "Login"
-msgstr ""
+msgstr "Login"
 
 #: src/components/navigation/sidebar.tsx
 msgid "Logout"
-msgstr ""
+msgstr "Logout"
 
 #: src/routes/home/home.route.tsx
 msgid "Most apps will require internationalization at some point in their lifetime. This template the necessary setup for multiple languages that are loaded lazily once selected. Try changing the language in the top right corner."
-msgstr ""
+msgstr "Most apps will require internationalization at some point in their lifetime. This template the necessary setup for multiple languages that are loaded lazily once selected. Try changing the language in the top right corner."
 
 #: src/routes/post-create/post-create.route.tsx
 #: src/routes/post-create/post-create.route.tsx
 msgid "New blog post"
-msgstr ""
+msgstr "New blog post"
 
 #: src/routes/post-create/post-create.route.tsx
 msgid "New blog post added"
-msgstr ""
+msgstr "New blog post added"
 
 #: src/routes/post-list/post-list.route.tsx
 msgid "New post"
-msgstr ""
+msgstr "New post"
 
 #: src/components/uikit/multi-select/index.tsx
 msgid "No matching options."
-msgstr ""
+msgstr "No matching options."
 
 #: src/routes/home/home.route.tsx
 msgid "No one likes looking at a blank screen. This template implements a traditional Single-Page-Application which means that the initial JS bundle has to downloaded before the app can render. A nice looking splash screen can be shown until the app is ready to render making the app loading UX more pleasant."
-msgstr ""
+msgstr "No one likes looking at a blank screen. This template implements a traditional Single-Page-Application which means that the initial JS bundle has to downloaded before the app can render. A nice looking splash screen can be shown until the app is ready to render making the app loading UX more pleasant."
 
 #: src/components/uikit/async-select/index.tsx
 msgid "No options found"
-msgstr ""
+msgstr "No options found"
 
 #: src/components/uikit/multi-select-combobox/index.tsx
 msgid "No results found."
@@ -233,11 +233,11 @@ msgstr "Open date picker"
 #: src/routes/not-found/not-found-unauthenticated.tsx
 #: src/routes/not-found/not-found-authenticated.tsx
 msgid "Page not found"
-msgstr ""
+msgstr "Page not found"
 
 #: src/routes/login/login.route.tsx
 msgid "Password"
-msgstr ""
+msgstr "Password"
 
 #: src/routes/internal-error/internal-error-unauthenticated.tsx
 #: src/routes/internal-error/internal-error-authenticated.tsx
@@ -246,11 +246,11 @@ msgstr "Please try to refresh the page"
 
 #: src/routes/home/home.route.tsx
 msgid "Practically every app needs to have a way to log in the user. This template provides a barebones authentication setup that should be extended to have a real way to log in the user either with a cookie or JWT based authentication method."
-msgstr ""
+msgstr "Practically every app needs to have a way to log in the user. This template provides a barebones authentication setup that should be extended to have a real way to log in the user either with a cookie or JWT based authentication method."
 
 #: src/components/common/error-view.tsx
 msgid "Reload page"
-msgstr ""
+msgstr "Reload page"
 
 #: src/components/uikit/chip/index.tsx
 msgid "Remove"
@@ -258,15 +258,15 @@ msgstr "Remove"
 
 #: src/components/common/error-view.tsx
 msgid "Report an error"
-msgstr ""
+msgstr "Report an error"
 
 #: src/routes/home/home.route.tsx
 msgid "Route Preloading"
-msgstr ""
+msgstr "Route Preloading"
 
 #: src/components/uikit/partials/select-filter-input.tsx
 msgid "Search options"
-msgstr ""
+msgstr "Search options"
 
 #: src/components/uikit/multi-select-combobox/index.tsx
 msgid "Search results"
@@ -274,51 +274,51 @@ msgstr "Search results"
 
 #: src/components/uikit/text-input/index.tsx
 msgid "Show password"
-msgstr ""
+msgstr "Show password"
 
 #: src/routes/home/home.route.tsx
 msgid "Skeleton Placeholders"
-msgstr ""
+msgstr "Skeleton Placeholders"
 
 #: src/routes/internal-error/internal-error-unauthenticated.tsx
 #: src/routes/internal-error/internal-error-authenticated.tsx
 #: src/components/uikit/async-select/index.tsx
 msgid "Something went wrong"
-msgstr ""
+msgstr "Something went wrong"
 
 #: src/components/common/error-view.tsx
 msgid "Something went wrong!"
-msgstr ""
+msgstr "Something went wrong!"
 
 #: src/routes/home/home.route.tsx
 msgid "Speed is one of the most important aspects of a good UX. This template introduces a pattern for preloading route's data and code-split code in order to make page transitions feel instant."
-msgstr ""
+msgstr "Speed is one of the most important aspects of a good UX. This template introduces a pattern for preloading route's data and code-split code in order to make page transitions feel instant."
 
 #: src/routes/home/home.route.tsx
 msgid "Spinners, so many spinners, everywhere. Traditional Single-Page-Applications usually show spinners while loading data for a given page. Instead of showing simple spinners this template offers a way to implement skeleton placeholders for pages with a cool shimmering effect."
-msgstr ""
+msgstr "Spinners, so many spinners, everywhere. Traditional Single-Page-Applications usually show spinners while loading data for a given page. Instead of showing simple spinners this template offers a way to implement skeleton placeholders for pages with a cool shimmering effect."
 
 #: src/routes/home/home.route.tsx
 msgid "Splash Screen"
-msgstr ""
+msgstr "Splash Screen"
 
 #: src/routes/login/login.route.tsx
 msgid "Submit"
-msgstr ""
+msgstr "Submit"
 
 #: src/routes/theming/theming.route.tsx
 #: src/routes/theming/theming.route.tsx
 #: src/components/navigation/sidebar.tsx
 msgid "Theming"
-msgstr ""
+msgstr "Theming"
 
 #: src/routes/feature-3.route.tsx
 msgid "This page is only accessible when <0>feature-3</0> is enabled in session."
-msgstr ""
+msgstr "This page is only accessible when <0>feature-3</0> is enabled in session."
 
 #: src/routes/home/home.route.tsx
 msgid "This React app contains the necessary building blocks that you need to get your project started. You can freely alter any aspect of the template to fit your needs better."
-msgstr ""
+msgstr "This React app contains the necessary building blocks that you need to get your project started. You can freely alter any aspect of the template to fit your needs better."
 
 #: src/components/uikit/date-range-picker/predefined-ranges.tsx
 msgid "This Year"
@@ -326,7 +326,7 @@ msgstr "This Year"
 
 #: src/routes/post-create/post-create.route.tsx
 msgid "Title"
-msgstr ""
+msgstr "Title"
 
 #: src/components/uikit/date-range-picker/predefined-ranges.tsx
 msgid "Today"
@@ -338,7 +338,7 @@ msgstr "Type to search"
 
 #: src/routes/home/home.route.tsx
 msgid "Welcome to Taito Fullstack Template!"
-msgstr ""
+msgstr "Welcome to Taito Fullstack Template!"
 
 #: src/components/uikit/date-range-picker/predefined-ranges.tsx
 msgid "Yesterday"
@@ -346,4 +346,4 @@ msgstr "Yesterday"
 
 #: src/routes/feature-3.route.tsx
 msgid "You can enable features via the feature flag manager widget."
-msgstr ""
+msgstr "You can enable features via the feature flag manager widget."
